candle-einops-macros/tests/ui/fail/einsum-equation-input-count.rs
use candle_einops_macros::einsum;

fn main() {
    let _ = einsum!("row, row, row -> row", (), (), ());
}
