candle-einops-macros/tests/ui/fail/einsum-equation-input-count.stderr
error: einsum supports at most two input axis lists; equation contains 3
 --> tests/ui/fail/einsum-equation-input-count.rs:4:21
  |
4 |     let _ = einsum!("row, row, row -> row", (), (), ());
  |                     ^^^^^^^^^^^^^^^^^^^^^^
